# assignment_inverse-kinematics

./: CMakeLists.txt  README.md
smoke-test/: CMakeLists.txt  test.cpp  test.sh  test.xml
smoke-test/fixtures/: fixture.xml
src/: main.cpp
